﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Trivial]
 - CPAHDAY!
 - no code changes.
 - tests augmented.

 [Dependencies::Stats]
 - Dependencies changed since 2.000000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)
 - test: -3

 [Tests]
 - Update reportprereqs test

2.000000 2014-07-31T07:41:02Z
 [00 Major]
 - Changes that affect hand-operated downstreams.

 [01 Version Scheme]
 - Version is now normalised as x.yyyyyy (Mantissa=6)
 - This is the primary reason for the 2.x on the box.
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [02 Toolkit]
 - Now shipping with ExtUtils::MakeMaker for installer.
 - Soften dependencies to only pull "latest" deps as recommendations.
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [Dependencies::Stats]
 - Dependencies changed since 1.7.2, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +44 -2 (recommends: -1, suggests: +1 ↑1)
 - runtime: +1 ↓1
 - test: +5 ↓1 -2 (recommends: +3)

1.7.2 2013-04-09T22:42:06Z
 - Sync to KENTNL 1.7.2
 - Use MB 0.4004

 [Dependencies::Stats]
 - Dependencies changed since 1.3.0, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +5 -1 (recommends: ↑1, suggests: ↑1)
 - test: ↑1

 [Documentation]
 - Update Copyright year
 - Add README.mkdn

 [Meta]
 - Bugtracker to github issues

 [Packaging]
 - utilise test_requires in Build.PL

1.3.0 2012-03-12T13:17:14Z
 - Sync with KENTNL 1.3.0

 [Dependencies::Stats]
 - Dependencies changed since 1.0.6, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +5 -2
 - test: -1

 [Internals]
 - VERSION declarations moved out of BEGIN
 - AUTHORITY declared in all packages.
 - redundant methods _defined_or , _if_git_versions and _load stripped
 - added mvp_multivalue args to sync with 1.3.0
 - added _only_fiveten method to match 1.3.0
 - refactored logic into a new method, bundle_config_inner matching @KENTNL

 [Packaging]