@@ -2,14 +2,18 @@
 
 {{$NEXT}}
  [00 Trivial]
- - CPAHDAY!
+ - CPANDAY!
  - no code changes.
  - tests augmented.
+ - whitespace adjusted.
 
  [Dependencies::Stats]
  - Dependencies changed since 2.000000, see misc/*.deps* for details
  - develop: +1 (suggests: ↑1)
  - test: -3
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
 
  [Tests]
  - Update reportprereqs test
